sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var sorted:Boolean=true
	while(sorted) 
	{
		for (i<- 0 to getNombreValeurs()-2) 
		{	if(plusPetitQue(i,j)) 
			{  	echange(i,j)
			sorted = true
			}
		}
	}
	
}
